2.25.1 (2025-03-18)
-----------------------------
* Important Fix
  - Fixed an issue where all driver stats could be completely reset if driver.stats file could not be accessed while saving.
    Stats file saving now uses "maximum_saving_attempts" value in "Application" setting for saving retries, and backup accordingly.
  - Fixed a rare case where extremely small fuel tank capacity would break fuel calculation,
    such as 1 liter or less tank capacity found on some unusual vehicle mods in "RF2".

* Fuel Module
  - Now supports and auto-detects "battery charge usage" as a primary consumption type with charge regeneration taken into
    calculation for non-hybrid pure electric vehicles such as "FE Gen3" that is based on "RF2" new electric motor system.
    Note, some electric vehicles in "RF2" are based on older electric system and not utilizing the new battery charge
    and electric motor system, such as "FE Gen1" & "FE Gen2".

* Hybrid Module
  - Add estimated battery charge net change (gain or loss) per lap and delta calculation.
  - Add "minimum_delta_distance" option, which sets minimum recording distance (in meters) between each delta sample.
  - Add alternative electric motor state checker for electric vehicle that doesn't have motor state available.
    Battery usage and state info can now be correctly displayed in "Battery, Gear, P2P" Widget for electric vehicles
    that are based on "RF2" new electric motor system but don't have motor state available.

* Battery Widget
  - Add "show_estimated_net_change" option, which shows estimated battery charge net change from current lap.
    Positive value indicates net gain (regen higher than drain); negative indicates net loss (drain higher than regen).
    Total net change reading is more accurate for vehicles that constantly consume battery charge, such as "FE" or "Hypercar" class.
    It is less useful for vehicles that only utilize electric motor for a short duration, such as "P2P".