@@ -1713,6 +1713,16 @@ WIDGET_DEFAULT = {
         "bkg_color_position": "#333333",
         "font_color_player_position": "#000000",
         "bkg_color_player_position": "#DDDDDD",
+        "show_position_change": True,
+        "show_position_change_in_class": True,
+        "font_color_position_same": "#AAAAAA",
+        "bkg_color_position_same": "#333333",
+        "font_color_position_gain": "#66EE00",
+        "bkg_color_position_gain": "#333333",
+        "font_color_position_loss": "#EE6600",
+        "bkg_color_position_loss": "#333333",
+        "font_color_player_position_change": "#000000",
+        "bkg_color_player_position_change": "#DDDDDD",
         "show_driver_name": True,
         "driver_name_shorten": False,
         "driver_name_uppercase": False,
@@ -1810,6 +1820,7 @@ WIDGET_DEFAULT = {
         "column_index_class": 5,
         "column_index_tyre_compound": 7,
         "column_index_pitstop_count": 10,
+        "column_index_position_change": 12,
         "column_index_timeinterval": 13,
         "column_index_timegap": 15,
         "column_index_pitstatus": 20,
