@@ -75,7 +75,7 @@ class Realtime(Overlay):
         # Empty dataset (last value sets toggle state, 0 - show, 1 - draw gap, 2 - hide)
         self.empty_vehicles_data = (
             (0,2),  # in_pit
-            ("",0,2),  # position
+            ("",-1,0,2),  # position
             ("",0,2),  # driver name
             ("",0,2),  # vehicle name
             ("",0,2),  # pos_class
@@ -110,6 +110,33 @@ class Realtime(Overlay):
                 layout=layout,
                 targets=self.bars_pos,
                 column_index=self.wcfg["column_index_position"],
+                hide_start=1,
+            )
+        # Driver position change
+        if self.wcfg["show_position_change"]:
+            self.bar_style_pgl = (
+                self.set_qss(
+                    fg_color=self.wcfg["font_color_position_same"],
+                    bg_color=self.wcfg["bkg_color_position_same"]),
+                self.set_qss(
+                    fg_color=self.wcfg["font_color_position_gain"],
+                    bg_color=self.wcfg["bkg_color_position_gain"]),
+                self.set_qss(
+                    fg_color=self.wcfg["font_color_position_loss"],
+                    bg_color=self.wcfg["bkg_color_position_loss"]),
+                self.set_qss(
+                    fg_color=self.wcfg["font_color_player_position_change"],
+                    bg_color=self.wcfg["bkg_color_player_position_change"])
+            )
+            self.bars_pgl = self.set_qlabel(
+                style=self.bar_style_pgl[0],
+                width=3 * font_m.width + bar_padx,
+                count=self.veh_range,
+            )
+            self.set_grid_layout_table_column(
+                layout=layout,
+                targets=self.bars_pgl,
+                column_index=self.wcfg["column_index_position_change"],
                 hide_start=1,
             )
         # Driver name
@@ -405,6 +432,9 @@ class Realtime(Overlay):
                 # Driver position
                 if self.wcfg["show_position"]:
                     self.update_pos(self.bars_pos[idx], temp_data[1])
+                # Driver position change
+                if self.wcfg["show_position_change"]:
+                    self.update_pgl(self.bars_pgl[idx], temp_data[1])
                 # Driver name
                 if self.wcfg["show_driver_name"]:
                     self.update_drv(self.bars_drv[idx], temp_data[2])
@@ -452,7 +482,31 @@ class Realtime(Overlay):
             else:
                 text = ""
             target.setText(text)
-            target.setStyleSheet(self.bar_style_pos[data[1]])
+            target.setStyleSheet(self.bar_style_pos[data[2]])
+            self.toggle_visibility(target, data[-1])
+
+    def update_pgl(self, target, data):
+        """Driver position change (gain/loss)"""
+        if target.last != data:
+            target.last = data
+            if data[0] != "":
+                pos_diff = data[1]
+                if pos_diff > 0:
+                    text = f"▲{pos_diff: >2}"
+                    color_index = 1
+                elif pos_diff < 0:
+                    text = f"▼{-pos_diff: >2}"
+                    color_index = 2
+                else:
+                    text = "- 0"
+                    color_index = 0
+            else:
+                text = ""
+                color_index = 0
+            if data[2]:
+                color_index = 3
+            target.setText(text)
+            target.setStyleSheet(self.bar_style_pgl[color_index])
             self.toggle_visibility(target, data[-1])
 
     def update_drv(self, target, data):
@@ -705,8 +759,12 @@ class Realtime(Overlay):
         # 0 Vehicle in pit (in_pit: bool, state)
         in_pit = (veh_info.inPit, state)
 
-        # 1 Driver position (position: int, hi_player, state)
-        position = (veh_info.positionOverall, hi_player, state)
+        # 1 Driver position (position: int, position difference: int, hi_player, state)
+        if self.wcfg["show_position_change_in_class"]:
+            pos_diff = veh_info.qualifyInClass - veh_info.positionInClass
+        else:
+            pos_diff = veh_info.qualifyOverall - veh_info.positionOverall
+        position = (veh_info.positionOverall, pos_diff, hi_player, state)
 
         # 2 Driver name (drv_name: str, hi_player, state)
         drv_name = (veh_info.driverName, hi_player, state)
